--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "18.2.0",
     "react-hook-form": "^7.51.5",
     "react-native": "0.74.1",
+    "react-native-countdown-circle-timer": "^3.2.1",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
