--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "expo": "~51.0.8",
-    "expo-font": "~12.0.5",
+    "expo": "~51.0.9",
+    "expo-font": "~12.0.6",
     "expo-splash-screen": "^0.27.4",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.1",
@@ -28,7 +28,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.1.0"
   },
