--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-toast-message": "^2.2.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-wheel-scrollview-picker": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
